k8s/01-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: better-bull-board
  labels:
    name: better-bull-board
