k8s/18-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-service
  namespace: better-bull-board
  labels:
    app: better-bull-board-app
spec:
  type: ClusterIP
  ports:
  - port: 3000
    targetPort: 3000
    protocol: TCP
  selector:
    app: better-bull-board-app
