k8s/22-ingest-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ingest-service
  namespace: better-bull-board
  labels:
    app: better-bull-board-ingest
spec:
  type: ClusterIP
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
  selector:
    app: better-bull-board-ingest
